--- a/bori2.css
+++ b/bori2.css
@@ -92,7 +92,7 @@ span {
 	display: inline-block;
 	padding: 1rem 2.8rem;
 	background: transparent;
-	color: Black;
+	color: black;
 	border: 2px solid Yellow;
 	border-radius: 1rem;
 	font-size: 1.6rem;
